add frontend, add cors to all microservices
