# BuyService/docs/swagger.json
@@ -4,6 +4,39 @@
         "contact": {}
     },
     "paths": {
+        "/buy-service/buy-cart": {
+            "post": {
+                "description": "buy cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "buy-service"
+                ],
+                "parameters": [
+                    {
+                        "description": "Cart data",
+                        "name": "cart",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.Cart"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/buy-service/get-report-by-id/{id}": {
             "get": {
                 "description": "description of function that get report by id",
@@ -46,37 +79,6 @@
                 ],
                 "tags": [
                     "buy-service"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "buy cart",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "buy-service"
-                ],
-                "parameters": [
-                    {
-                        "description": "Cart data",
-                        "name": "cart",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.Cart"
-                        }
-                    }
                 ],
                 "responses": {
                     "200": {
